Update workflow to improve summary fetching process

--- a/.github/workflows/update-summary.yml
+++ b/.github/workflows/update-summary.yml
@@ -3,7 +3,7 @@ name: Daily Summary Update
 on:
   schedule:
     - cron: "0 10 * * *"   # runs every day at 10:00 UTC
-  workflow_dispatch:       # allow manual trigger
+  workflow_dispatch:       # allow manual trigger from Actions tab
 
 permissions:
   contents: write
@@ -12,7 +12,7 @@ jobs:
   update-summary:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout gh-pages branch
         uses: actions/checkout@v4
         with:
           ref: gh-pages
@@ -26,18 +26,17 @@ jobs:
         run: |
           pip install requests
 
-      - name: Fetch summary from your proxy app
+      - name: Fetch summary from your proxy Space
         env:
           PROXY_URL: ${{ secrets.PROXY_URL }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          echo "Fetching summary..."
+          echo "Fetching summary from $PROXY_URL"
           mkdir -p data
 
-          # Example: call your Space’s API endpoint (replace this URL!)
           curl -s -X POST "$PROXY_URL/api/summarize" \
             -H "Content-Type: application/json" \
-            -d '{"api_key":"${OPENAI_API_KEY}","subject_area":"Science","content_type":"news","audience":"general","days_limit":1,"top_entries":10}' \
+            -d '{"api_key":"'"${OPENAI_API_KEY}"'","subject_area":"Science","content_type":"news","audience":"general","days_limit":1,"top_entries":10}' \
             -o data/latest.json
 
           DATE=$(date +"%Y-%m-%d")
