Refactor update-summary workflow for clarity

--- a/.github/workflows/update-summary.yml
+++ b/.github/workflows/update-summary.yml
@@ -12,14 +12,17 @@ jobs:
       contents: write
 
     steps:
+      # Checkout gh-pages branch
       - uses: actions/checkout@v4
         with:
           ref: gh-pages
 
+      # Python setup
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
+      # Install dependencies
       - run: pip install requests pytz markdown
 
       - name: Fetch summaries for Astro & AI
@@ -76,18 +79,20 @@ jobs:
               # --- Build Markdown summary ---
               summary_md = f"""# 🧠 {subject.capitalize()} Daily Summary
 
-{data.get('bulk_summary','')}
+              {data.get('bulk_summary','')}
+              
+              ---
+              
+              ## 📰 Entries
+              
+              """
 
----
-
-## 📰 Entries
-
-"""
               for e in data.get("entries", []):
                   summary_md += f"- **[{e.get('title','')}]({e.get('link','#')})**  \n"
                   summary_md += f"  *{e.get('published','')}*  \n"
                   summary_md += f"  {e.get('summary','')}\n\n"
 
+              # Save Markdown and convert to HTML
               md_path = f"data/{tag}_latest.md"
               html_path = f"data/{tag}_latest.html"
 
@@ -99,34 +104,36 @@ jobs:
                   extensions=['extra', 'sane_lists', 'tables']
               )
 
-              html_wrapped = f"""<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<title>{subject.capitalize()} Summary</title>
-<style>
-body {{
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  max-width: 850px;
-  margin: 2rem auto;
-  padding: 1rem;
-  background: #f8fafc;
-  color: #222;
-}}
-h1, h2, h3 {{
-  color: #004080;
-}}
-a {{ color: #007acc; }}
-a:hover {{ text-decoration: underline; }}
-small {{ color: #666; }}
-</style>
-</head>
-<body>
-{html_content}
-</body>
-</html>
-"""
+              # Minimal CSS for nice display
+              html_wrapped = f"""
+              <!DOCTYPE html>
+              <html lang="en">
+              <head>
+              <meta charset="utf-8">
+              <title>{subject.capitalize()} Summary</title>
+              <style>
+              body {{
+                font-family: Arial, sans-serif;
+                line-height: 1.6;
+                max-width: 850px;
+                margin: 2rem auto;
+                padding: 1rem;
+                background: #f8fafc;
+                color: #222;
+              }}
+              h1, h2, h3 {{
+                color: #004080;
+              }}
+              a {{ color: #007acc; }}
+              a:hover {{ text-decoration: underline; }}
+              small {{ color: #666; }}
+              </style>
+              </head>
+              <body>
+              {html_content}
+              </body>
+              </html>
+              """
               with open(html_path, "w", encoding="utf-8") as f:
                   f.write(html_wrapped)
 
@@ -134,21 +141,24 @@ small {{ color: #666; }}
           fetch_and_save("astro", "astro_enthusiasts", "astro")
           fetch_and_save("ai", "ai_enthusiasts", "ai")
 
-          # Build index.html
-          index_html = """<!DOCTYPE html><html><head><meta charset="utf-8">
-<title>Daily Science Feeds</title></head>
-<body style="font-family:sans-serif;max-width:600px;margin:auto;padding:2rem;">
-<h1>📚 Daily Science Feeds</h1>
-<ul>
-  <li><a href="data/ai_latest.html">🧠 AI News Summary</a></li>
-  <li><a href="data/astro_latest.html">🌌 Astronomy News Summary</a></li>
-</ul>
-<p><small>Updated daily via GitHub Actions.</small></p>
-</body></html>"""
+          # --- Build index.html linking both ---
+          index_html = """
+          <!DOCTYPE html><html><head><meta charset="utf-8">
+          <title>Daily Science Feeds</title></head>
+          <body style="font-family:sans-serif;max-width:600px;margin:auto;padding:2rem;">
+          <h1>📚 Daily Science Feeds</h1>
+          <ul>
+            <li><a href="data/ai_latest.html">🧠 AI News Summary</a></li>
+            <li><a href="data/astro_latest.html">🌌 Astronomy News Summary</a></li>
+          </ul>
+          <p><small>Updated daily via GitHub Actions.</small></p>
+          </body></html>
+          """
           with open("index.html","w",encoding="utf-8") as f:
               f.write(index_html)
           PY
 
+      # Commit and push changes to gh-pages
       - name: Commit & push
         run: |
           git config user.name "github-actions[bot]"
