Remove emoji from daily summary header
Remove emoji from daily summary header in Markdown.

--- a/.github/workflows/update-summary.yml
+++ b/.github/workflows/update-summary.yml
@@ -77,7 +77,7 @@ jobs:
                   json.dump(data, f, ensure_ascii=False, indent=2)
 
               # --- Build Markdown summary ---
-              summary_md = f"""# 🧠 {subject.capitalize()} Daily Summary
+              summary_md = f"""# {subject.capitalize()} Daily Summary
 
               {data.get('bulk_summary','')}
                           
